# PhotoFramesEditor

./: CMakeLists.txt  README  main.cpp  photoframeseditor.pro
borderplugins/solid/: SolidBorderDrawer.h
borders/: BlendBorderDrawer.cpp  BlendBorderDrawer.h  BlendBorderDrawer.pro  BlendBorderDrawer_global.h  BlendBorderDrawer_p.cpp  BlendBorderDrawer_p.h  BorderChangeListener.cpp  BorderChangeListener.h  BorderDrawerFactoryInterface.h  BorderDrawerInterface.h  BorderDrawersLoader.cpp  BorderDrawersLoader.h  BordersGroup.cpp  BordersGroup.h  SolidBorderDrawer.cpp  SolidBorderDrawer.h  SolidBorderDrawer.pro  SolidBorderDrawer_p.cpp  SolidBorderDrawer_p.h
effectplugins/blur/: BlurPhotoEffect.h  BlurPhotoEffect.pro  BlurPhotoEffect_p.h
effectplugins/colorize/: ColorizePhotoEffect.h  ColorizePhotoEffect_p.h
effectplugins/grayscale/: GrayscalePhotoEffect.h  GrayscalePhotoEffect.pro
effectplugins/greyscale/: GrayscalePhotoEffect_p.h
effectplugins/sepia/: SepiaPhotoEffect.h  SepiaPhotoEffect.pro  SepiaPhotoEffect_p.h
effects/: AbstractPhotoEffectFactory.h  AbstractPhotoEffectInterface.h  BlurPhotoEffect.cpp  BlurPhotoEffect.h  BlurPhotoEffect.pro  BlurPhotoEffect_p.cpp  BlurPhotoEffect_p.h  ColorizePhotoEffect.cpp  ColorizePhotoEffect.h  ColorizePhotoEffect.pro  ColorizePhotoEffect_p.cpp  ColorizePhotoEffect_p.h  GreyscalePhotoEffect.cpp  GreyscalePhotoEffect.h  GreyscalePhotoEffect.pro  GreyscalePhotoEffect_global.h  GreyscalePhotoEffect_p.cpp  GreyscalePhotoEffect_p.h  PhotoEffectsGroup.cpp  PhotoEffectsGroup.h  PhotoEffectsLoader.cpp  PhotoEffectsLoader.h  SepiaPhotoEffect.cpp  SepiaPhotoEffect.h  SepiaPhotoEffect.pro  SepiaPhotoEffect_p.cpp  SepiaPhotoEffect_p.h
events/: UndoCommandEvent.cpp  UndoCommandEvent.h  UndoCommandEventFilter.cpp  UndoCommandEventFilter.h  canvasmouseevent.cpp  canvasmouseevent.h
listeners/: TextColorChangeListener.cpp  TextColorChangeListener.h  TextFontChangeListener.cpp  TextFontChangeListener.h
models/: AbstractMovableModel.h  LayersModel.cpp  LayersModel.h  LayersModelItem.cpp  LayersModelItem.h  LayersSelectionModel.cpp  LayersSelectionModel.h
plugin/: kipiplugin_photoframeseditor.desktop  photoframeseditor.cpp  photoframeseditor.desktop  photoframeseditor.h  photoframeseditor_p.h  photoframeseditorui.rc  photolayoutseditor.desktop  plugin_photoframeseditor.cpp  plugin_photoframeseditor.h
resources/: icons.qrc  photoframeseditor.kcfg  photoframeseditorui.rc
settings/: PFEConfig.cpp  PFEConfig.h  PFEConfigDialog.cpp  PFEConfigDialog.h  PFEConfigSkeleton.cpp  PFEConfigSkeleton.h  PFEConfigSkeleton.kcfgc  PFEConfigViewWidget.cpp  PFEConfigViewWidget.h  photoframeseditor.kcfg
undo/: UndoBorderChangeCommand.cpp  UndoMoveRowsCommand.cpp  UndoMoveRowsCommand.h  UndoRemoveItem.cpp  UndoRemoveItem.h
utils/: KEditFactory.cpp  KEditFactory.h  PFESettings.cpp  PFESettings.h  global.cpp  global.h
utils/qtpropertybrowser/: CMakeLists.txt
utils/qtpropertybrowser/src/: qtvariantproperty.h
widgets/: AbstractPhoto.cpp  AbstractPhoto.h  CanvasCreationDialog.cpp  CanvasCreationDialog.h  CanvasWidget.cpp  CanvasWidget.h  abstract_photo.cpp  abstract_photo.h  abstract_photo_resizer.cpp  abstract_photo_resizer.h  photo_context_menu.cpp  photo_context_menu.h  polygon_widget.cpp  polygon_widget.h  widgets_factory.cpp  widgets_factory.h
widgets/canvas/: Canvas.cpp  Canvas.h  CanvasSize.cpp  CanvasSize.h  CropWidgetItem.cpp  CropWidgetItem.h  LayersTree.cpp  LayersTree.h  MousePressListener.h  QGraphicsEditionWidget.cpp  QGraphicsEditionWidget.h  QGraphicsRotationItem.cpp  QGraphicsRotationItem.h  QGraphicsSelectionItem.cpp  QGraphicsSelectionItem.h  QGraphicsSelectionItem_p.cpp  QGraphicsSelectionItem_p.h  RotationWidgetItem.cpp  RotationWidgetItem.h  ScalingWidgetItem.cpp  ScalingWidgetItem.h  Scene.cpp  Scene.h  SceneBackground.cpp  SceneBackground.h  SwitchableIcon.cpp  SwitchableIcon.h
widgets/dialogs/: CanvasCreationDialog.cpp  CanvasCreationDialog.h  CanvasSizeDialog.cpp  CanvasSizeDialog.h  GridConfigDialog.h  GridSetupDialog.cpp  GridSetupDialog.h  ImageFileDialog.cpp  ImageFileDialog.h
widgets/effects/: AbstractPhotoEffect.cpp  AbstractPhotoEffect.h  AbstractPhotoEffectsGroup.cpp  AbstractPhotoEffectsGroup.h  BlurPhotoEffect.cpp  BlurPhotoEffect.h  PhotoEffectsGroup.cpp  PhotoEffectsGroup.h  PixelizePhotoEffect.cpp  PixelizePhotoEffect.h
widgets/extra/: PatternsComboBox.cpp  PatternsComboBox.h
widgets/items/: AbstractItemInterface.cpp  AbstractItemInterface.h  AbstractPhoto.cpp  AbstractPhoto.h  AbstractPhotoEffect.h  AbstractPhotoEffectsGroup.h  BlurPhotoEffect.cpp  BlurPhotoEffect.h  PhotoItem.cpp  PhotoItem.h  TextItem.cpp  TextItem.h
widgets/layers/: LayersTree.cpp  LayersTree.h  LayersTreeDelegate.cpp  LayersTreeDelegate.h  LayersTreeTitleWidget.h
widgets/menus/: GraphicsEditingWidgetMenu.cpp  GraphicsEditingWidgetMenu.h  LayersTreeMenu.cpp  LayersTreeMenu.h  SceneMenu.cpp  SceneMenu.h
widgets/tools/: AbstractItemsListViewTool.cpp  AbstractItemsListViewTool.h  AbstractItemsListViewTool_p.h  AbstractItemsTool.cpp  AbstractItemsTool.h  AbstractListTool.cpp  AbstractListTool.h  AbstractListTool_p.h  AbstractPropertiesModel.cpp  AbstractPropertiesModel.h  AbstractTool.cpp  AbstractTool.h  BorderEditTool.cpp  BorderEditTool.h  CanvasEditTool.cpp  CanvasEditTool.h  ColorizeTool.cpp  ColorizeTool.h  EffectsEditorTool.cpp  EffectsEditorTool.h  TextEditorTool.cpp  TextEditorTool.h  ToolsDockWidget.cpp  ToolsDockWidget.h
